# lookbook

./: .travis.yml  README.md  com.github.danrabbit.lookbook.yml  meson.build
.github/workflows/: ci.yml  main.yml
data/: Application.css  com.github.danrabbit.lookbook.appdata.xml.in  com.github.danrabbit.lookbook.desktop.in  com.github.danrabbit.lookbook.gresource.xml  com.github.danrabbit.lookbook.gschema.xml  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.danrabbit.lookbook.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+158 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
src/: Application.vala  CategoryView.vala  IconData.vala  IconView.vala  MainWindow.vala
src/Widgets/: IconListBox.vala  IconListRow.vala  ModeSwitch.vala  SidebarRow.vala
